--- a/crop-planning/src/App.css
+++ b/crop-planning/src/App.css
@@ -1,38 +1,76 @@
-.App {
+/*.App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
+}*/
+
+.container {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  width: 100%;
+  padding: 20px;
+}
+
+.sidebar{
+  background: #282c34;
+  color: #fff;
+  height: 100vh;
+  width: 300px;
+}
+
+.App-header {
+  background-color: #282c34;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(5px + 2vmin);
+  color: white;
+}
+
+.top_section {
+  display: flex;
+  padding: 20px 15px;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  font-size: 25px;
+}
+
+.bars {
+  display: flex;
+  margin-left: 20px;
+  font-size: 25px;
+}
+
+.link {
+  display: flex;
+  color: #fff;
+  padding: 10px 15px;
+  gap: 10px;
+  transition: all 0.5s;
+}
+
+.link:hover {
+  background: lightblue;
+  color:black;
+  transition: all 0.5s;
+}
+
+.active {
+  background: lightblue;
+  color:black;
+}
+
+.icon, .link_text {
+  font-size: 20px;
+
 }
