--- a/crop-planning2/src/index.css
+++ b/crop-planning2/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color:cornflowerblue;
+  background-color: #3B8687;
   font-family:'Courier New', Courier, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,4 +13,9 @@ code {
 
 style {
   background-image: 'url("https://camo.githubusercontent.com/e23238aae4cb8c485e6949cea444757d0eb84489018c4e4d487d18b2bb7ab294/68747470733a2f2f7765626772616469656e74732e636f6d2f7075626c69632f7765626772616469656e74735f706e672f313538253230416e67656c253230436172652e706e67")';
+}
+
+h2 {
+  font-size: 85%;
+  color: #0B486B;
 }
