--- a/crop-planning-firebase/src/Register.css
+++ b/crop-planning-firebase/src/Register.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 .register {
   height: 100vh;
   width: 100vw;
@@ -10,29 +12,52 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #dcdcdc;
   padding: 30px;
+  background-color: #CFF09E;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .register__textBox {
   padding: 10px;
   font-size: 18px;
+  font-family: 'Inter', sans-serif;
   margin-bottom: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .register__btn {
   padding: 10px;
   font-size: 18px;
+  font-family: 'Inter', sans-serif;
   margin-bottom: 10px;
   border: none;
   color: white;
   background-color: black;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .register__google {
-  background-color: #4285f4;
+  background-color: #3C8586;
 }
 
 .register div {
   margin-top: 7px;
+}
+
+.text {
+  font-family: 'Inter', sans-serif;
+  font-size: 10px;
+  color: #0C486B;
 }
