--- a/crop-planning-firebase/src/Reset.css
+++ b/crop-planning-firebase/src/Reset.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 .reset {
   height: 100vh;
   width: 100vw;
@@ -10,23 +12,40 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #dcdcdc;
   padding: 30px;
+  background-color: #CFF09E;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .reset__textBox {
   padding: 10px;
   font-size: 18px;
+  font-family: 'Inter', sans-serif;
   margin-bottom: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .reset__btn {
   padding: 10px;
   font-size: 18px;
+  font-family: 'Inter', sans-serif;
   margin-bottom: 10px;
   border: none;
   color: white;
   background-color: black;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .reset div {
