--- a/crop-planning/src/components/Navbar/Navbar.css
+++ b/crop-planning/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .NavbarItems {
+    padding-top:50px;
     background-color: linear-gradient(90deg, rgb(110,94,254) 0%, rgba(73,63,252,1) 100%);
     height: 80px;
     display: flex;
@@ -9,8 +10,9 @@
 
 .navbar-logo {
     color: #fff;
-    justify-self: start;
-    margin-left: 20px;
+    align-items: left;
+    margin-left:-125px;
+    margin-right:300px;
     cursor: pointer;
 }
 
@@ -20,13 +22,12 @@
 }
 
 .nav-menu{
- display: grid;
+ display:contents;
  grid-template-columns: repeat(5, auto);
  grid-gap: 20px;
  list-style: none;
  text-align: center;
  width: 70vw;
- justify-content: end;
  margin-right: 2rem;
 }
 
@@ -38,7 +39,7 @@
 
 .nav-links:hover{
     background-color: #3a1d07;
-    background-radius: 4px;
+    border-radius: 30px;
     transition: all 0.2s ease-out;
 }
 
