--- a/crop-planning/src/pages/Home/Home.css
+++ b/crop-planning/src/pages/Home/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: rgb(168,219,168);
 
 }
@@ -28,11 +30,15 @@ body{
 }
 
 .title{
+    margin-top: -250px;
+    margin-left: 140px;
+    position:absolute;
     width: 50%
 }
 
 .title h1{
     font-size: 5rem;
+    font-family: 'Inter', sans-serif;
     color: white;
 
 }
@@ -50,6 +56,7 @@ body{
     color: white;
     border-radius: 5px;
     font-size: 1.2rem;
+    font-family: 'Inter', sans-serif;
     box-shadow: 1px 2px 10px white;
 
 }
