--- a/crop-planning/src/App.css
+++ b/crop-planning/src/App.css
@@ -139,3 +139,12 @@ label.checkbox {
 button[type="submit"] {
   margin-top: 1rem;
 }
+
+
+/* .dashboard, .suggestionBoard {
+  display: flex;
+  height: 90vh;
+  align-items:center;
+  justify-content: center;
+  font-size: 3rem;
+} */
