--- a/crop-planning/src/App.css
+++ b/crop-planning/src/App.css
@@ -141,7 +141,7 @@ button[type="submit"] {
   margin-top: 1rem;
 }
 
-.grid-container {
+/* .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
   padding: 10px;
@@ -149,11 +149,25 @@ button[type="submit"] {
   position: relative;
   top: -150px;
   float: right; 
+} */
+
+canvas {
+  display: grid;
+  border: 1px solid black;
+  background-color: #61dafb;
+  /* padding: 10px; */
+  width: 600px;
+  height: 600px;
+  position: absolute;
+  top: 120px;
+  left: 500px;
+  float: right; 
+  border-radius: 5px;
 }
 
-.grid-item {
+/* .grid-item {
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
   text-align: center;
-}
+} */
