--- a/crop-planning/src/components/Footer/Footer.css
+++ b/crop-planning/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
 .footer{
   margin-top: 1rem;
   padding: 1rem;
-  background-color: #0C486B;
+  background-color: #3C8486;
   position: fixed;
   bottom: 0;
   left: 0;
