--- a/crop-planning/src/pages/About/About.css
+++ b/crop-planning/src/pages/About/About.css
@@ -28,13 +28,15 @@ body{
 } */
 
 .title{
-    margin-top: -250px;
-    margin-left: 140px;
+
+    margin-left:150px;
+    margin-top:-150px;
     position:absolute;
     width: 50%
 }
 
 .title h1{
+    margin-left:125px;
     font-size: 5rem;
     font-family: 'Inter', sans-serif;
     color: white;
@@ -56,3 +58,11 @@ body{
     box-shadow: 1px 2px 10px white;
 
 } 
+
+img {
+    border-radius: 20%;
+    display: flex;
+    position:relative;
+    margin-left:500px;
+    margin-top:-20px;
+}
