--- a/crop-planning/src/pages/Login/Login.css
+++ b/crop-planning/src/pages/Login/Login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 .login {
-  height: 100vh;
+  height: 75vh;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -74,8 +74,8 @@
   margin-top: 7px;
 }
 
-.text {
+.text__login {
   font-family: 'Inter', sans-serif;
-  font-size: 10px;
+  font-size: 15px;
   color: #0C486B;
 }
