--- a/crop-planning/src/pages/Register/Register.css
+++ b/crop-planning/src/pages/Register/Register.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 .register {
-  height: 100vh;
+  height: 75vh;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -56,8 +56,9 @@
   margin-top: 7px;
 }
 
-.text {
+.text__register {
   font-family: 'Inter', sans-serif;
-  font-size: 10px;
+  font-size: 15px;
+  align-items: center;
   color: #0C486B;
 }
