--- a/crop-planning/src/pages/Home/Home.css
+++ b/crop-planning/src/pages/Home/Home.css
@@ -23,7 +23,7 @@ body{
 
 }
 
-.outer{
+.outer {
     position: relative;
     top: 80px;
     left: 80px;
@@ -66,7 +66,7 @@ p {
 
 }
 
-img {
+.outer img {
     border-radius: 20%;
 }
 
